<resources>
    <string name="app_name">HelloSensor</string>
    <string name="heading_0_0">Heading: 0.0</string>
    <string name="compas_image">Compas image</string>
    <string name="button">Button</string>
    <string name="start_game">Start Game</string>
    <string name="find_degree">Find Degree</string>
    <string name="find_north">Find North</string>
    <string name="toggle_game_to_play">Toggle game to play</string>
    <string name="toggle_a_buton_to_start">Toggle a buton to start</string>
    <string name="HelloSensor" />
    <string name="accelerometer">Accelerometer</string>
    <string name="compass">Compass</string>
    <string name="hellosensor">HelloSensor</string>
    <string name="accelerate">accelerate</string>
    <string name="start">Start</string>
    <string name="home">HOME</string>
    <string name="z">Z:</string>
    <string name="y">Y:</string>
    <string name="x">X:</string>
    <string name="max_acceleration">Max Acceleration:</string>
    <string name="max_acceleration_x_axis">Max Acceleration: X-Axis</string>
    <string name="x_0_0">0.0</string>
    <string name="max_acceleration_y_axis">Max Acceleration: Y-Axis</string>
    <string name="_0_0">0.0</string>
    <string name="max_acceleration_z_axis">Max Acceleration: Z-Axis</string>
    <string name="z_0_0">0.0</string>
    <string name="y_axis">Y-Axis</string>
    <string name="y_0_0">0.0</string>
    <string name="current_acceleration">Current Acceleration:</string>
    <string name="max_x">Max X</string>
    <string name="textv">TextView</string>
    <string name="textview">TextView</string>
    <string name="current">Current:</string>
    <string name="max_y">Max Y:</string>
    <string name="maximim_x">Max X:</string>
    <string name="maximum_z">Max Z:</string>
    <string name="kompass">Kompass</string>

</resources>